--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
   <body>
     <div class="panels">
       <div class="panel panel1">
-        <p>Hey</p>
+        <p class="panel1-first">Hey</p>
         <p>Let's</p>
-        <p>Dance</p>
+        <p class="panel1-last">Dance</p>
       </div>
       <div class="panel panel2">
-        <p>Give</p>
+        <p class="panel2-first">Give</p>
         <p>Take</p>
-        <p>Receive</p>
+        <p class="panel2-last">Receive</p>
       </div>
       <div class="panel panel3">
-        <p>Experience</p>
+        <p class="panel3-first">Experience</p>
         <p>It</p>
-        <p>Today</p>
+        <p class="panel3-last">Today</p>
       </div>
       <div class="panel panel4">
-        <p>Give</p>
+        <p class="panel4-first">Give</p>
         <p>All</p>
-        <p>You can</p>
+        <p class="panel4-last">You can</p>
       </div>
       <div class="panel panel5">
-        <p>Life</p>
+        <p class="panel5-first">Life</p>
         <p>In</p>
-        <p>Motion</p>
+        <p class="panel5-last">Motion</p>
       </div>
     </div>
     <script src="main.js"></script>
